[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "VMC"
version = "0.0.1"
dependencies = [
  "pymol >= 2.0.0",
  "mypy",
  "tqdm",
  "opencv-python",
  "matplotlib",
  "numpy",
  "bagpype",
  "scipy",
  "networkx",
  "pygenstability"
]
authors = [
{ name="Ryan Reese", email="thenewteadrinker@gmail.com" },
]
description = "A PyMol script that enables the visiualisation of Markov Communities in biological molecules."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ryan-Reese/VMC"
