[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "VisualiseMarkovCommunities"
version = "0.0.3"
dependencies = [
  # PyMOL package should be preinstalled in PyMOL prompt
  # "pymol >= 2.0.0"
  "mypy",
  "tqdm",
  "opencv-python",
  "matplotlib",
  "numpy",
  "scipy",
  "networkx",
  # "bagpype",
  # "pygenstability"
]
authors = [
{ name="Ryan Reese", email="thenewteadrinker@gmail.com" },
]
description = "PyMOL visualisation of Markov communities within biological molecules."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ryan-Reese/VMC"
